Source/WebCore/animation/KeyframeEffectStack.cpp
@@ -236,10 +236,26 @@ bool KeyframeEffectStack::allowsAcceleration() const
     // all effects that could support acceleration using acceleration, then we might
     // as well not run any at all since we'll be updating effects for this stack
     // for each animation frame. So for now, we simply return false if any effect in the
-    // stack is unable to be accelerated.
-    return !hasMatchingEffect([] (const KeyframeEffect& effect) {
-        return effect.preventsAcceleration();
-    });
+    // stack is unable to be accelerated, or if we have more than one effect animating
+    // an accelerated property with an implicit keyframe.
+
+    HashSet<AnimatableCSSProperty> allAcceleratedProperties;
+
+    for (auto& effect : m_effects) {
+        if (effect->preventsAcceleration())
+            return false;
+        auto& acceleratedProperties = effect->acceleratedProperties();
+        if (!allAcceleratedProperties.isEmpty()) {
+            auto previouslySeenAcceleratedPropertiesAffectingCurrentEffect = allAcceleratedProperties.intersectionWith(acceleratedProperties);
+            if (!previouslySeenAcceleratedPropertiesAffectingCurrentEffect.isEmpty()
+                && !effect->acceleratedPropertiesWithImplicitKeyframe().intersectionWith(previouslySeenAcceleratedPropertiesAffectingCurrentEffect).isEmpty()) {
+                return false;
+            }
+        }
+        allAcceleratedProperties.add(acceleratedProperties.begin(), acceleratedProperties.end());
+    }
+
+    return true;
 }
 
 void KeyframeEffectStack::startAcceleratedAnimationsIfPossible()
